<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mcq.view.MainScreenActivity"
    android:background="@color/md_theme_light_primary"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/img_view_iq"
        android:text="@string/app_quiz"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_extra_large"
        android:fontFamily="@font/roboto_slab_extrabold"
        android:textAlignment="center"
        />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/img_view_iq"
        android:contentDescription="@string/app_quiz"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/iq_png"
        />

        <TextView
            android:id="@+id/txt_view_load_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/img_view_iq"
            android:layout_marginTop="@dimen/dp_20"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_slab_medium"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/load_questions"
            android:textAlignment="center"
            />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="@dimen/dp_100"
        android:padding="16dp"
        android:text="@string/start"
        app:strokeColor="@color/stroke_color"
        android:textColor="@color/white"
        android:backgroundTint="@color/md_theme_light_primary"
        app:cornerRadius="@dimen/dp_12"
        android:fontFamily="@font/roboto_slab_semibold"
        app:strokeWidth="@dimen/dp_01"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/fragmentContainer"
        />

</FrameLayout>