<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_primary"
    tools:context=".mcq.view.QuizFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_200"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardCornerRadius="@dimen/dp_16"
                app:cardBackgroundColor="@color/md_theme_light_background"
                android:elevation="@dimen/dp_12">

                <TextView
                    android:id="@+id/txt_view_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab_semibold"
                    android:textSize="20sp"
                    android:padding="@dimen/dp_12"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:text="Sample question text" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/option_btn_one"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/card_view"
                android:layout_marginTop="@dimen/dp_20"
                app:strokeColor="@color/stroke_color"
                android:textColor="@color/white"
                android:backgroundTint="@color/md_theme_light_primary"
                app:cornerRadius="@dimen/dp_12"
                android:fontFamily="@font/roboto_slab_semibold"
                android:paddingVertical="@dimen/dp_16"
                app:strokeWidth="@dimen/dp_01" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/option_btn_two"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/option_btn_one"
                android:layout_marginTop="@dimen/dp_20"
                app:strokeColor="@color/stroke_color"
                android:textColor="@color/white"
                android:backgroundTint="@color/md_theme_light_primary"
                app:cornerRadius="@dimen/dp_12"
                android:paddingVertical="@dimen/dp_16"
                android:fontFamily="@font/roboto_slab_semibold"
                app:strokeWidth="@dimen/dp_01" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/option_btn_three"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/option_btn_two"
                android:layout_marginTop="@dimen/dp_20"
                app:strokeColor="@color/stroke_color"
                android:textColor="@color/white"
                android:backgroundTint="@color/md_theme_light_primary"
                app:cornerRadius="@dimen/dp_12"
                android:paddingVertical="@dimen/dp_16"
                android:fontFamily="@font/roboto_slab_semibold"
                app:strokeWidth="@dimen/dp_01" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/option_btn_four"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/option_btn_three"
                android:layout_marginTop="@dimen/dp_20"
                app:strokeColor="@color/stroke_color"
                android:textColor="@color/white"
                android:backgroundTint="@color/md_theme_light_primary"
                app:cornerRadius="@dimen/dp_12"
                android:paddingVertical="@dimen/dp_16"
                android:fontFamily="@font/roboto_slab_semibold"
                app:strokeWidth="@dimen/dp_01" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/skip_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/skip"
                app:strokeColor="@color/stroke_color"
                android:textColor="@color/white"
                android:backgroundTint="@color/md_theme_light_primary"
                app:cornerRadius="24dp"
                android:paddingVertical="@dimen/dp_12"
                android:fontFamily="@font/roboto_slab_semibold"
                app:strokeWidth="@dimen/dp_01" />

            <LinearLayout
                android:id="@+id/linear_lyt_streak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/dp_20"
                app:layout_constraintTop_toBottomOf="@+id/option_btn_four"
                android:orientation="horizontal"
                android:weightSum="3"
                android:visibility="gone"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_streak"
                    android:contentDescription="@string/streak_score"
                    android:layout_weight="1"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_streak"
                    android:contentDescription="@string/streak_score"
                    android:layout_weight="1"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_streak"
                    android:contentDescription="@string/streak_score"
                    android:layout_weight="1"
                    />

            </LinearLayout>
            <TextView
                android:layout_marginTop="@dimen/dp_10"
                android:visibility="gone"
                android:id="@+id/txt_view_streak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/linear_lyt_streak"
                android:text="@string/streak_star"
                android:textColor="@color/correct"
                android:textSize="@dimen/text_size_medium"
                android:textAlignment="center"
                android:fontFamily="@font/roboto_slab_medium"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>
